--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#短信验证码
+SMS_ALIYUN_ACCESS_KEY_ID=
+SMS_ALIYUN_ACCESS_KEY_SECRET=
+SMS_ALIYUN_TEMPLATE_REGISTER=
