--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "overtrue/easy-sms": "^1.1",
+        "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-socialite": "~2.0",
         "tymon/jwt-auth": "^1.0"
     },
