--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
+        "mews/captcha": "~3.0",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-socialite": "~2.0",
