--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "laravel/ui": "2.*",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "summerblue/generator": "7.*"
     },
     "config": {
         "optimize-autoloader": true,
